[package]
name = "bowl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.1"
thiserror = "1.0.37"
log = "0.4.17"
simplelog = "0.12.0"
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
random_word = "0.3.0"
capctl = "0.2.2"
syscallz = "0.16.1"
libc = "0.2.139"
